(tweaks) z-index fix for dockable elements

--- a/src/main.css
+++ b/src/main.css
@@ -1218,6 +1218,7 @@ input[type=number]::-webkit-outer-spin-button{-webkit-appearance:none;margin:0}
 
 /* ---------- EQ / FX panels ---------- */
 .pk_dck{position:relative;display:none;width:100%;box-sizing:border-box;overflow-x:auto;overflow-y:hidden}
+.pk_dck.pk_drag{overflow:visible;z-index:16}
 
 .pk_frqan{
 	position:absolute;z-index:13;
